--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "imask": "^6.4.2",
     "jquery": "^3.6.0",
     "jquery-validation": "^1.19.3",
     "svg4everybody": "^2.1.9",
