--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "jquery": "^3.6.0",
     "jquery-validation": "^1.19.3",
     "svg4everybody": "^2.1.9",
+    "sweetalert2": "^11.4.9",
     "swiper": "^7.4.1",
     "vanilla-lazyload": "^17.5.0",
     "wowjs": "^1.1.3"
