--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "glightbox": "^3.2.0",
     "imask": "^6.4.2",
     "nouislider": "^15.6.0",
     "svg4everybody": "^2.1.9",
